# Crocrodile-Yukoo

./: .gitignore  notes.md  pyproject.toml
crocroyukoo/client/: __init__.py
crocroyukoo/engine/: .__init__.py.un~
crocroyukoo/uci/: .__init__.py.un~  __init__.py
yukoo/: __init__.py
yukoo/engine/: __init__.py
yukoo/evaluation/: .__init__.py.un~  .constants.py.un~  .evaluator.py.un~  __init__.py  constants.py  evaluator.py
yukoo/moves/: .ordering.py.un~  ordering.py
