[tool.poetry]
name = "crocrodile-yukoo"
version = "0.1.0"
description = "Yukoo - A new kind of chess engine."
authors = ["Virinas-code <alexcode228@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
python-chess = "^1.999"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
